--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <div class="w3-container" id="apartment">
     <h2 class="w3-text-green">The Apartment</h2>
     <div class="w3-display-container mySlides">
-    <img src="https://www.w3schools.com/w3images/livingroom.jpg" style="width:100%;margin-bottom:-6px">
+    <img src="https://www.w3schools.com/w3css/img_temp_apartment_rental.jpg" style="width:100%;margin-bottom:-6px">
       <div class="w3-display-bottomleft w3-container w3-black">
         <p>Living Room</p>
       </div>
